# Resistance-Game

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  compose.yaml  pyproject.toml
.github/workflows/: ci.yml
resistance/: __init__.py  app.py  config.py  domain.py  game.py  game_handlers.py  game_persistence.py  game_store.py  handlers.py  i18n.py  settings_store.py  statistics_store.py
resistance/locales/en/LC_MESSAGES/: messages.mo  messages.po
resistance/locales/ru/LC_MESSAGES/: messages.mo  messages.po
tests/: test_app.py  test_config.py  test_domain.py  test_game.py  test_game_handlers.py  test_game_persistence.py  test_game_store.py  test_handlers.py  test_i18n.py  test_settings_store.py  test_statistics_store.py
