[project]
name = "resistance-werewolves"
version = "0.1.0"
description = "Telegram bot for The Resistance in a werewolf theme"
requires-python = ">=3.12"
dependencies = [
    "aiogram[i18n]>=3,<4",
]

[dependency-groups]
dev = [
    "mypy>=1.13",
    "pytest>=8",
    "ruff>=0.8",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"

[tool.mypy]
strict = true
